--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "dependencies": {
+    "cac": "^6.7.14",
+    "dockerode": "^3.3.5",
+    "fastify": "^4.21.0"
+  },
   "devDependencies": {
+    "@types/dockerode": "^3.3.19",
+    "prettier": "^3.0.1",
     "typescript": "^5.1.6"
   }
 }
