--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "cac": "^6.7.14",
     "dockerode": "^3.3.5",
     "fastify": "^4.21.0",
-    "semver": "^7.5.4"
+    "fastify-type-provider-zod": "^1.1.9",
+    "semver": "^7.5.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/dockerode": "^3.3.19",
