--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "prettier": "prettier --write .",
+    "build": "tsc",
+    "start": "node dist/index.js --socket /Users/jeeyo/.colima/docker.sock"
+  },
   "dependencies": {
     "cac": "^6.7.14",
     "dockerode": "^3.3.5",
