--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
     /* Visit https://aka.ms/tsconfig to read more about this file */
-    "target": "es2016",
+    "target": "es2021",
     "module": "commonjs",
     "outDir": "./dist",
+    "lib": ["es2021"],
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
