--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "scripts": {
     "prettier": "prettier --write .",
     "build": "tsc",
-    "start": "node dist/index.js --socket /Users/jeeyo/.colima/docker.sock"
+    "start": "node dist/index.js"
   },
   "dependencies": {
-    "cac": "^6.7.14",
     "dockerode": "^3.3.5",
     "fastify": "^4.21.0",
     "fastify-type-provider-zod": "^1.1.9",
